Change RuntimeWrapper to use new ProcessBuilder